--- a/pom.xml
+++ b/pom.xml
@@ -2,13 +2,13 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>edu.dongnao.zk</groupId>
-    <artifactId>zk-study</artifactId>
+    <groupId>edu.demo.zk</groupId>
+    <artifactId>ZooKeeperDemo</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-    <name>zk-study</name>
-    <url>http://maven.apache.org</url>
+    <name></name>
+    <url></url>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
